# Lifelihood

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  BinaryFiles  Cargo.toml  DESCRIPTION  Dockerfile  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  Makefile  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  build.R  build_pkg.R  build_site.R  config.yaml  config2.yaml  config_pierrick.yaml  devhistory.R  here.csv  index.html  index.md  input_data.txt  input_data_lifelihood.out  input_data_lifelihood.txt  joseph.txt  justfile  llms.txt  param_range.txt  pkgdown.yml  read_model.R  rust.html  (+8 more)
R/: OLDmortality_rate.R  block.R  check_boundaries.R  compute_event_rate.R  compute_mortality_rate.R  config_file.R  create_input_txt.R  data.R  default_boundaries.R  derivtrans.R  execute_bin.R  goodness_of_fit.R  group_by_group.R  lifelihood.R  lifelihoodData.R  lifelihood_optim.R  link.R  mapping_effect_names.R  mcmcse.R  mortality_rate.R  parsers.R  pred_mortality_rate.R  predict.R  read_output.R  run_lifelihood.R  run_lifelihood_console.R  simulate_input.R  simulation.R  simulation_utils.R  translator.R  txt_to_csv.R  utils.R  visualization.R  write_input.R
articles/: compilation.html  compilation.md  contributing.html  contributing.md  create-simulation-input.html  create-simulation-input.md  customize-parameter-boundaries-and-estimation-warning.html  customize-parameter-boundaries-and-estimation-warning.md  fit-saturated-model.html  fit-saturated-model.md  fitting-interaction-model.html  fitting-interaction-model.md  index.html  (+29 more)
(+731 files in other folders)
